...
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="85S-9V-cm4"/>
                                    <constraint firstAttribute="width" constant="80" id="VDr-83-zGx"/>
                                </constraints>
                                <state key="normal">
                                    <attributedString key="attributedTitle">
                                        <fragment content="Modules">
                                            <attributes>
                                                <color key="NSColor" red="0.24705882352941178" green="0.31764705882352939" blue="0.70980392156862748" alpha="1" colorSpace="calibratedRGB"/>
                                                <font key="NSFont" metaFont="system" size="15"/>
                                                <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                            </attributes>
                                        </fragment>
...
                                    <constraint firstAttribute="height" constant="30" id="fOb-71-xhJ"/>
                                    <constraint firstAttribute="width" constant="94" id="h5B-H5-vAb"/>
                                </constraints>
                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <state key="normal">
                                    <attributedString key="attributedTitle">
                                        <fragment content="Resources">
                                            <attributes>
                                                <color key="NSColor" red="0.24705882352941178" green="0.31764705882352939" blue="0.70980392156862748" alpha="1" colorSpace="calibratedRGB"/>
                                                <font key="NSFont" metaFont="system" size="15"/>
                                                <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                            </attributes>
                                        </fragment>
...
                                    <constraint firstAttribute="width" constant="80" id="bYo-rA-WJZ"/>
                                    <constraint firstAttribute="height" constant="30" id="krR-EA-2aK"/>
                                </constraints>
                                <color key="tintColor" red="0.2470588235" green="0.31764705879999999" blue="0.70980392160000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <state key="normal">
                                    <attributedString key="attributedTitle">
                                        <fragment content="Courses">
                                            <attributes>
                                                <color key="NSColor" red="0.24705882352941178" green="0.31764705882352939" blue="0.70980392156862748" alpha="1" colorSpace="calibratedRGB"/>
                                                <font key="NSFont" metaFont="system" size="15"/>
                                                <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                            </attributes>
                                        </fragment>
...
                        <outlet property="dismissToCBtn" destination="2hZ-G4-E73" id="mxX-OH-aMx"/>
                        <outlet property="modulesBtn" destination="buT-5h-aaX" id="NMR-os-DU3"/>
                        <outlet property="navigationBar" destination="GQ6-ez-Pm6" id="Dap-JF-2an"/>
                        <outlet property="noContentView" destination="gtF-5V-ooG" id="6dD-b7-dMw"/>
                        <outlet property="resourcesBtn" destination="OTn-rn-hAa" id="zA5-Io-aiw"/>
                        <outlet property="tableView" destination="Dz7-jq-hML" id="RdK-oN-9sD"/>
                        <outlet property="tocHam" destination="P1H-nt-tXV" id="lR3-dk-oNd"/>
                        <outlet property="tocView" destination="Vbp-wI-mPm" id="nGu-V8-mNl"/>
                        <outlet property="webView" destination="QDR-TF-MU6" id="s9C-OX-gcz"/>
                        <segue destination="TJk-Uk-mcr" kind="show" identifier="segueToCTOPlayer" id="lRJ-zE-DOE"/>
                        <segue destination="e9i-rK-FfW" kind="unwind" identifier="segueTwo" unwindAction="unwindToHome2WithSegue:" id="N7R-oM-how"/>
                        <segue destination="Ev4-2n-YI6" kind="show" identifier="downloadsToOpenrap" id="iX1-38-FoI"/>
                        <segue destination="BYZ-38-t0r" kind="show" identifier="tocToHome" id="aHv-Tt-Xob"/>
...
