...
    var resourseID : String = ""
    var courseID: String = ""
    var lastCategorySelected = "Course"
    
    let downloadPersistanceEntityName = "DownloadPersistance"
    
    var sideTableData: [SideBarItem] = [SideBarItem("About","")]
    
    var counter = 0
    var didHomeViewLoad = true
    var loadingTimer : Timer!
    
    var documentDirectory = Singleton.fileManager.urls(for: .documentDirectory, in: .userDomainMask).first!
...
        
    }
    
    override func viewDidLoad() {
        super.viewDidLoad()
        OpenRapUtil.createHotSpotButton()
        OpenRapUtil.hotspotButton?.accessibilityIdentifier = "openRapButton"
        self.tocHam.accessibilityIdentifier = "tocHam"
        self.tocView.isHidden = true
        
        let navigationBarTintColor = AppConstants.primaryTheme.replacingOccurrences(of: "#", with: "")
        navigationBar.barTintColor = UIColor.fromHex(rgbValue: UInt32(String(navigationBarTintColor), radix: 16)!, alpha: 1.0)
        
...
        webView.scrollView.addSubview(self.refreshControl)
        
        // Taking to openrap view if the request id made to open downloads for openrap
        if isOpenedForOpenRap {
            isOpenedForOpenRap = false
            
            let hotspotAlert = UIAlertController(title: "Lex-Hotspot", message: "Do you want to continue to Lex-hotspot", preferredStyle : UIAlertController.Style.alert)
            
            let goToHotspotAction = UIAlertAction(title: "Yes", style: .default, handler: {(action : UIAlertAction!) in
                self.performSegue(withIdentifier: "downloadsToOpenrap", sender: self)
            })
            let stayHereAction = UIAlertAction(title: "Stay here", style: .cancel, handler: { (action : UIAlertAction!) in
                //DO NOTHING
            })
            hotspotAlert.addAction(goToHotspotAction)
            hotspotAlert.addAction(stayHereAction)
            hotspotAlert.preferredAction = goToHotspotAction
            self.present(hotspotAlert, animated: true, completion: nil)
...
    func checkAndShowMsgIfOffline() -> Bool {
        if !Connectivity.isConnectedToInternet() {
            var alertController : UIAlertController
            if WiFiUtil.result{
                alertController = UIAlertController(title: "Lex Hotspot", message: AppConstants.inOpenRapMode, preferredStyle: .alert)
            }else {
                alertController = UIAlertController(title: "Network Disconnected", message: AppConstants.inOfflineMode, preferredStyle: .alert)
            }
            let noAction = UIAlertAction(title: "Okay", style: .default) { (action) -> Void in
                //Do nothing
                Singleton.tempCounter = ""
            }
            alertController.addAction(noAction)
            alertController.preferredAction = noAction
            
...
