...
        }
        let tintColor = AppConstants.primaryTheme.replacingOccurrences(of: "#", with: "")
        ChatbotViewController.lexColor = UIColor.fromHex(rgbValue: UInt32(String(tintColor), radix: 16)!, alpha: 1.0)
        
        
        listeningLabel.accessibilityIdentifier = "listeningLabel"
        closeButton.accessibilityIdentifier = "chatbotCloseButton"
        keyboardTextField.accessibilityIdentifier = "keyboardTextField"
        sendButton.accessibilityIdentifier = "sendButton"
        micButton.accessibilityIdentifier = "micButton"
        
        NotificationCenter.default.addObserver(self, selector: #selector(keyboardWillChange(notification:)), name: UIResponder.keyboardWillChangeFrameNotification, object: nil)
        
...
